@@ -12,7 +12,7 @@ Throughout the coursework specification there are many links to various guides t
 
 You can run your application in dev mode that enables live coding using:
 ```shell script
-./mvnw compile quarkus:dev -Dnet.bytebuddy.experimental
+./mvnw compile quarkus:dev -D"net.bytebuddy.experimental"
 ```
 
 > **_NOTE:_**  Quarkus now ships with a Dev UI, which is available in dev mode only at http://localhost:8080/q/dev/.
